# ImageProcessing

./: README.md
opencv/components/: CMakeLists.txt  Makefile.am
opencv/components/Affine/: .project  .travis.yaml.Affine  ALL_BUILD.vcxproj  Affine.conf  Affine.cpp  Affine.h  Affine.sln  Affine.vcxproj  AffineComp.cpp  AffineComp.vcxproj  AffineComp_vc8.vcproj  AffineComp_vc9.vcproj  Affine_vc8.sln  Affine_vc8.vcproj  Affine_vc9.sln  Affine_vc9.vcproj  CMakeLists.txt  INSTALL.vcxproj  Makefile.Affine  Makefile.am  PACKAGE.vcxproj  README.Affine  RTC.xml  RTC.xml20130606112448  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen.vcxproj  doxygen_Affine.vcxproj  rtc.conf  uninstall.vcxproj  uninstall_Affine.vcxproj
opencv/components/BackGroundSubtractionSimple/: .project  .travis.yaml.BackGroundSubtractionSimple  BackGroundSubtractionSimple.conf  BackGroundSubtractionSimple.cpp  BackGroundSubtractionSimple.h  BackGroundSubtractionSimple.sln  BackGroundSubtractionSimple.vcxproj  BackGroundSubtractionSimpleComp.cpp  BackGroundSubtractionSimpleComp.vcxproj  BackGroundSubtractionSimpleComp_vc8.vcproj  BackGroundSubtractionSimpleComp_vc9.vcproj  BackGroundSubtractionSimple_vc8.sln  BackGroundSubtractionSimple_vc8.vcproj  BackGroundSubtractionSimple_vc9.sln  BackGroundSubtractionSimple_vc9.vcproj  CMakeLists.txt  INSTALL.vcxproj  Makefile.BackGroundSubtractionSimple  Makefile.am  PACKAGE.vcxproj  README.BackGroundSubtractionSimple  RTC.xml  RTC.xml20130607131721  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen.vcxproj  doxygen_BackGroundSubtractionSimple.vcxproj  rtc.conf  uninstall.vcxproj  uninstall_BackGroundSubtractionSimple.vcxproj
opencv/components/Binarization/: .project  .travis.yaml.Binarization  ALL_BUILD.vcxproj  Binarization.conf  Binarization.cpp  Binarization.h  Binarization.sln  Binarization.vcxproj  BinarizationComp.cpp  BinarizationComp.vcxproj  BinarizationComp_vc8.vcproj  BinarizationComp_vc9.vcproj  Binarization_vc8.sln  Binarization_vc8.vcproj  Binarization_vc9.sln  Binarization_vc9.vcproj  CMakeLists.txt  INSTALL.vcxproj  Makefile.Binarization  Makefile.am  PACKAGE.vcxproj  README.Binarization  RTC.xml  RTC.xml20130607141338  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_Binarization.vcxproj  rtc.conf  uninstall_Binarization.vcxproj
opencv/components/CameraViewer/: .project  .travis.yaml.CameraViewer  ALL_BUILD.vcxproj  CMakeLists.txt  CameraViewer.conf  CameraViewer.cpp  CameraViewer.h  CameraViewer.sln  CameraViewer.vcxproj  CameraViewerComp.vcxproj  CameraViewerComp_vc8.vcproj  CameraViewerComp_vc9.vcproj  CameraViewer_vc8.sln  CameraViewer_vc8.vcproj  CameraViewer_vc9.sln  CameraViewer_vc9.vcproj  INSTALL.vcxproj  Makefile.CameraViewer  Makefile.am  PACKAGE.vcxproj  README.CameraViewer  RTC.xml  RTC.xml20130607145201  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_CameraViewer.vcxproj  rtc.conf  uninstall_CameraViewer.vcxproj
opencv/components/Chromakey/: .project  .travis.yaml.Chromakey  ALL_BUILD.vcxproj  CMakeLists.txt  Chromakey.conf  Chromakey.cpp  Chromakey.h  Chromakey.sln  Chromakey.vcxproj  ChromakeyComp.vcxproj  ChromakeyComp_vc8.vcproj  ChromakeyComp_vc9.vcproj  Chromakey_vc8.sln  Chromakey_vc8.vcproj  Chromakey_vc9.sln  Chromakey_vc9.vcproj  INSTALL.vcxproj  Makefile.Chromakey  Makefile.am  PACKAGE.vcxproj  README.Chromakey  RTC.xml  RTC.xml20130607152812  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_Chromakey.vcxproj  rtc.conf  uninstall_Chromakey.vcxproj
opencv/components/Dilationerosion/: .project  .travis.yaml.DilationErosion  ALL_BUILD.vcxproj  CMakeLists.txt  DilationErosion.conf  DilationErosion.cpp  DilationErosion.h  DilationErosionComp_vc8.vcproj  DilationErosionComp_vc9.vcproj  DilationErosion_vc8.sln  DilationErosion_vc8.vcproj  DilationErosion_vc9.sln  DilationErosion_vc9.vcproj  Dilationerosion.sln  Dilationerosion.vcxproj  DilationerosionComp.vcxproj  INSTALL.vcxproj  Makefile.DilationErosion  Makefile.am  PACKAGE.vcxproj  README.DilationErosion  RTC.xml  RTC.xml20130607155202  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_Dilationerosion.vcxproj  rtc.conf  uninstall_Dilationerosion.vcxproj
opencv/components/DirectShowCam/: .project  CMakeLists.txt  DirectShowCam.conf  DirectShowCam.cpp  DirectShowCam.h  DirectShowCamComp.cpp  DirectShowCamComp_vc8.vcproj  DirectShowCamComp_vc9.vcproj  DirectShowCam_vc8.sln  DirectShowCam_vc8.vcproj  DirectShowCam_vc9.sln  DirectShowCam_vc9.vcproj  Makefile.DirectShowCam  README  README.DirectShowCam  RTC.xml  RTC.xml20130607161557  baseclasses_vc9.vcproj  qedit.h  rtc.conf
opencv/components/Edge/: .project  .travis.yaml.Edge  ALL_BUILD.vcxproj  CMakeLists.txt  Edge.conf  Edge.cpp  Edge.h  Edge.sln  Edge.vcxproj  EdgeComp.cpp  EdgeComp.vcxproj  EdgeComp_vc8.vcproj  EdgeComp_vc9.vcproj  Edge_vc8.sln  Edge_vc8.vcproj  Edge_vc9.sln  Edge_vc9.vcproj  INSTALL.vcxproj  Makefile.Edge  Makefile.am  PACKAGE.vcxproj  README.Edge  RTC.xml  RTC.xml20130611152419  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_Edge.vcxproj  rtc.conf  uninstall_Edge.vcxproj
opencv/components/Findcontour/: .project  .travis.yaml.Findcontour  ALL_BUILD.vcxproj  CMakeLists.txt  Findcontour.conf  Findcontour.cpp  Findcontour.h  Findcontour.sln  Findcontour.vcxproj  FindcontourComp.vcxproj  FindcontourComp_vc8.vcproj  FindcontourComp_vc9.vcproj  Findcontour_vc8.sln  Findcontour_vc8.vcproj  Findcontour_vc9.sln  Findcontour_vc9.vcproj  INSTALL.vcxproj  Makefile.Findcontour  Makefile.am  PACKAGE.vcxproj  README.Findcontour  RTC.xml  RTC.xml20130611155758  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_Findcontour.vcxproj  rtc.conf  uninstall_Findcontour.vcxproj
opencv/components/Flip/: .project  .travis.yaml.Flip  ALL_BUILD.vcxproj  CMakeLists.txt  Flip.conf  Flip.cpp  Flip.h  Flip.sln  Flip.vcxproj  FlipComp.vcxproj  FlipComp_vc8.vcproj  FlipComp_vc9.vcproj  Flip_vc8.sln  Flip_vc8.vcproj  Flip_vc9.sln  Flip_vc9.vcproj  INSTALL.vcxproj  Makefile.Flip  Makefile.am  PACKAGE.vcxproj  README.Flip  RTC.xml  RTC.xml20130611161610  ZERO_CHECK.vcxproj  doc.vcxproj  doxygen_Flip.vcxproj  rtc.conf  uninstall_Flip.vcxproj
opencv/components/Histogram/: .project  .travis.yaml.Histogram  (+26 more)
(+1035 files in other folders)
