cmake_minimum_required(VERSION 3.5.1)

project(components)
include(PGRCamera/cmake/FindFlyCapture.cmake)
add_subdirectory(TkCalibGUI)
#add_subdirectory(Affine)
add_subdirectory(BackGroundSubtractionSimple)
add_subdirectory(Binarization)
add_subdirectory(CameraViewer)
add_subdirectory(Chromakey)
add_subdirectory(Dilationerosion)
add_subdirectory(Edge)
add_subdirectory(Findcontour)
add_subdirectory(Flip)
add_subdirectory(Histogram)
add_subdirectory(Houghline)
add_subdirectory(ImageCalibration)
add_subdirectory(ImageSubtraction)
add_subdirectory(ObjectTracking)
add_subdirectory(OpenCVCamera)
if(FLYCAPTURE_FOUND)
  add_subdirectory(PGRCamera)
endif()
add_subdirectory(Perspective)
add_subdirectory(RockPaperScissors)
add_subdirectory(Rotate)
add_subdirectory(Scale)
add_subdirectory(Sepia)
add_subdirectory(SubtractCaptureImage)
add_subdirectory(Template)
add_subdirectory(Translate)
