## -*- Makefile -*-

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = Affine BackGroundSubtractionSimple Binarization Chromakey Dilationerosion Edge Findcontour Flip Histogram Houghline ImageCalibration ImageSubstraction ObjectTracking PGRCameraCapture PGRCameraMonitor Perspective RockPaperScissors Rotate Scale Sepia SubStractCaptureImage Template Translate USBCameraAcquire USBCameraMonitor
