## -*- Makefile -*-

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = Affine BackGroundSubtractionSimple Binarization Chromakey Dilationerosion Edge Findcontour Flip Histogram Houghline ImageCalibration ImageSubstraction ObjectTracking Perspective RockPaperScissors Rotate Scale Sepia SubStractCaptureImage Template Translate OpenCVCamera CameraViewer
