## -*- Makefile -*-

AUTOMAKE_OPTIONS = 1.9

AM_CPPFLAGS=`rtm-config --cflags` `pkg-config --cflags opencv`
AM_LDFLAGS=-`rtm-config --libs` `pkg-config --libs opencv`

#------------------------------------------------------------
# Targets
#------------------------------------------------------------
# Targets directories
#exampledir = $(pkgdatadir)/examples
exampledir = /usr/share/OpenRTM-aist/Components/OpenCV
socompdir  = $(exampledir)/rtcs
sourcedir  = $(exampledir)/src/Findcontour

# Loadable RTCs
socomp_LTLIBRARIES = Findcontour.la

Findcontour_la_SOURCES = Findcontour.cpp Findcontour.h
Findcontour_la_LDFLAGS = -module

# Standalone RTCs
example_PROGRAMS = FindcontourComp
#example_DATA     = Findcontour.conf

FindcontourComp_SOURCES = FindcontourComp.cpp 
FindcontourComp_LDADD   = Findcontour.o

#$(top_builddir)/src/lib/coil/libcoil.la 
# Example sources
source_DATA = $(ALL_SRC) $(EXTRA_DIST)

#------------------------------------------------------------
# Extra distributed files
#------------------------------------------------------------
EXTRA_DIST =                  \
	rtc.conf              \
	Makefile.Findcontour \
	README.Findcontour

ALL_SRC =                    \
	FindcontourComp.cpp \
	Findcontour.cpp     \
	Findcontour.h

#------------------------------------------------------------
# File list for deb/ports packages
#------------------------------------------------------------
lst:
	echo $(ALL_SRC) > src.lst
	echo $(EXTRA_DIST) > other.lst

clean-local:
	rm -f \
	*.gch *.bak *.rpo *.sym lib*.*_pure_* *.lst \
	Makefile.old *core *~ *.so *.log

